--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   equatable: ^2.0.7
   fluttertoast: ^8.2.4
   app_links: ^6.4.0
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
